[workspace]
resolver = "2"
members = ["relayer", "crates/*"]

[workspace.dependencies]
bindings = { package = "bob-bindings", path = "crates/bindings" }
utils = { package = "bob-utils", path = "crates/utils" }

# Bitcoin
bitcoin = "0.30.0"
bitcoincore-rpc = "0.17"

# Ethereum
alloy = "0.11.0"

# Other
reqwest = "0.11.11"
tokio = "1.40"
