[workspace]
resolver = "2"
members = ["relayer", "crates/*"]

[workspace.dependencies]
bindings = { path = "crates/bindings" }
utils = { package = "bob-utils", path = "crates/utils" }

# Bitcoin
bitcoin = "0.32.5"
bitcoincore-rpc = "0.19.0"

# Ethereum
alloy = { version = "1.0.7", features = [
    "full",
    "node-bindings",
    "sol-types",
    "contract",
    "serde"
] }
serde = "1.0.139"

# Other
reqwest = "0.11.11"
tokio = "1.40"
