[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
async-graphql = "6.0.11"
async-graphql-warp = "6.0.11"
graphql_client = { version = "0.13", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
futures = "0.3"
paste = "1.0"

alloy = { workspace = true, features = [
    "sol-types",
    "contract",
    "node-bindings",
] }
bindings.workspace = true
