[package]
name = "bob-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6"
thiserror = "2.0.12"
tracing = "0.1.0"
serde = "1.0.139"
serde_json = "1.0.82"
tempfile = "3"
hex = "0.4.3"

reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }

num = "0.4.3"
num-traits = "0.2.19"
num-derive = "0.4.2"

# Bitcoin
bitcoin = { workspace = true, features = ["serde"] }
bitcoincore-rpc.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
serial_test = "3.2.0"